# Merge

./: .gitignore  .port-mortem.toml  A  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  DEFENSE.md  Dockerfile  FUTURE.md  Makefile  README.md  UPSTREAM_BUG.md  WHAT_MARKED_GETS_WRONG.md  bench.mjs  debug.rs  div19.txt  extract_lexer.py  fix.js  fix_lexer.py  latest_transcript.txt  lexer_all_views.jsonl  lexer_edits.jsonl  lexer_views_utf8.jsonl  marked_bug_report.md  p1.jsonl  package.json  run_bench.ps1  single_file_code.txt  step_78.txt  submission_bundle.txt  submission_bundle_v2.txt  submission_bundle_v3.txt  test.md  test19.md  test19_no_underline.md  test_bash.sh  test_codespan.js  test_codespan.txt  test_codespan_multiline.txt  test_div1.js  (+18 more)
.cargo/: config.toml
.github/workflows/: ci.yml  upstream-tracking.yml
bench/: comparison.md  generate.py  marked_js.js  methodology.md  results.json  sign.js
bench/input/: large.md  medium.md  small.md
benches/: throughput.rs
corpus_museum/: README.md
demo/: index.html  run_demo.sh
fuzz/: Cargo.toml  differential.sh  divergences.json  fuzz.js  fuzz_gen.js  input.txt  log.txt  minimize.py
fuzz/corpus/: degenerate_links.md  emphasis_hell.md  nested_quotes.md  table_misaligned.md
fuzz/fuzz_targets/: fuzz_markdown.rs
scripts/: fetch_marked_specs.py
src/: escape.rs  inline.rs  lexer.rs  lexer_original.rs  lib.rs  main.rs  options.rs  renderer.rs  token.rs
tests/: commonmark.rs  debug.rs  integration.rs  print.rs  proptest.rs  pubkey.asc  regression.rs  spec.json.asc
tests/original/: KICKOFF_HASH.txt
tests/original/specs/marked/: gfm.json  (+2 more)
