[package]
name = "marked-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "CommonMark-compliant Markdown parser. Port of marked (JS) to Rust."
license = "MIT"
repository = "https://github.com/port-mortem/marked-rs"

[[bin]]
name = "marked-rs"
path = "src/main.rs"

[lib]
name = "marked_rs"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
wasm-bindgen = "0.2.117"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.8.0"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster test compilation
opt-level = 1
